--- a/WorksStyles.css
+++ b/WorksStyles.css
@@ -18,7 +18,7 @@ body::before {
     z-index: -1;
     pointer-events: none;
     background-size: cover;
-    background: url("/Images/BGRW.png") no-repeat center;
+    background: url("Images/BGRW.png") no-repeat center;
     animation: backgroundZoomAnimate 20s forwards;
 }
   
